k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 564362507028.dkr.ecr.ap-south-2.amazonaws.com/backend:latest
        ports:
        - containerPort: 3500
        readinessProbe:
          httpGet:
            path: /ready
            port: 3500
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3500
          initialDelaySeconds: 30
          periodSeconds: 20
