k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: devsecops


spec:

  selector:
    app: backend


  ports:

  - port: 3500
    targetPort: 3500
